src/objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Target</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grower</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Dealer - Dealer</fullName>
                </value>
                <value>
                    <fullName>Dealer -  Grower Through Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allocated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Allocated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand_Family__c</fullName>
        <label>Brand Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <label>Brand Name</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>DAD &amp; RB</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Descr__c</fullName>
        <label>Business Unit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Growth__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CS Growth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <label>Cancelled</label>
        <summaryFilterItems>
            <field>Account_Program__c.Execution_Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Program__c.Program_SFID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <label>Completed</label>
        <summaryFilterItems>
            <field>Account_Program__c.Execution_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Program__c.Program_SFID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Consumed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Consumed</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crop__c</fullName>
        <label>Crop</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CORN</fullName>
                </value>
                <value>
                    <fullName>SOYABEANS</fullName>
                </value>
                <value>
                    <fullName>COTTON</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Execution_Status__c</fullName>
        <label>Execution Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>In Execution</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Growth__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Growth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>In_Execution__c</fullName>
        <label>In Execution</label>
        <summaryFilterItems>
            <field>Account_Program__c.Execution_Status__c</field>
            <operation>equals</operation>
            <value>In Execution</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Program__c.Program_SFID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Not_Started__c</fullName>
        <label>Not Started</label>
        <summaryFilterItems>
            <field>Account_Program__c.Execution_Status__c</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Program__c.Program_SFID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Planning_Status__c</fullName>
        <label>Planning Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Post-Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Coverage__c</fullName>
        <label>Program Coverage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Local_Segment__c</fullName>
        <label>Target Local Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_RADL__c</fullName>
        <label>Target RADL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_local_segment_profile__c</fullName>
        <label>Target local segment / profile</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Acquire__c</fullName>
        <label>Total Acquire</label>
        <summaryFilterItems>
            <field>Account_Program__c.Service_Level_Class_Descr__c</field>
            <operation>equals</operation>
            <value>Acquire</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Program__c.Program_SFID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Develop__c</fullName>
        <label>Total Develop</label>
        <summaryFilterItems>
            <field>Account_Program__c.Service_Level_Class_Descr__c</field>
            <operation>equals</operation>
            <value>Develop</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Program__c.Program_SFID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Light_Touch__c</fullName>
        <label>Total Light Touch</label>
        <summaryFilterItems>
            <field>Account_Program__c.Service_Level_Class_Descr__c</field>
            <operation>equals</operation>
            <value>Light Touch</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Program__c.Program_SFID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Planned__c</fullName>
        <label>Total Planned</label>
        <summaryFilterItems>
            <field>Account_Program__c.Planning_Status__c</field>
            <operation>equals</operation>
            <value>Planned</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Program__c.Program_SFID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Post_Plan__c</fullName>
        <label>Total Post Plan</label>
        <summaryFilterItems>
            <field>Account_Program__c.Planning_Status__c</field>
            <operation>equals</operation>
            <value>Post-Plan</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Program__c.Program_SFID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Retain__c</fullName>
        <label>Total Retain</label>
        <summaryFilterItems>
            <field>Account_Program__c.Service_Level_Class_Descr__c</field>
            <operation>equals</operation>
            <value>Retain</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Program__c.Program_SFID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Volume_Growth__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Volume Growth</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand_Family__c</columns>
        <columns>Budget__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <recordTypes>
        <fullName>Non_Program</fullName>
        <active>true</active>
        <label>Non Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program</fullName>
        <active>true</active>
        <label>Program</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>